--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
 	
 
 </body>
-<script src='https://zhicheng99.github.io/qcanvas/Qcanvas.js'></script>
+<!-- <script src='https://zhicheng99.github.io/qcanvas/Qcanvas.js'></script> -->
+<script src='js/Qcanvas.js'></script>
+
 <script src='js/Drag.js'></script>
 <script src='js/Qflow.js'></script>
 <script src="js/mock.js"></script>
