增加二次曲线

--- a/index.html
+++ b/index.html
@@ -194,7 +194,11 @@
 	  				value:'line'
   				},
   				{
-	  				name:'曲线',
+	  				name:'二次曲线',
+	  				value:'quadraticCurve'
+  				},
+  				{
+	  				name:'三次曲线',
 	  				value:'bezierCurve'
   				}
   			],
